package com.neueda.app.model;

public enum AssetClass {
    EQUITY,
    FIXED_INCOME,
    COMMODITY,
    CURRENCY,
    DERIVATIVE
}
